Update TODO.md to mark email notification template and SMS integration as incomplete. Enhance Keycloak configuration to normalize server URL format. Update SecurityConfig to permit access to new authentication endpoints and add health check endpoint in HelloController. Refactor KeycloakAdminService to use admin credentials for user management and improve error handling in role assignment. Remove unused methods from KeycloakService interface.